--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'vegasIcons';
+  src: url('../assets/fonts/icons.eot');
+  /* IE9 Compat Modes */
+  src: url('../assets/fonts/icons.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */ url('../assets/fonts/icons.woff') format('woff'), /* Modern Browsers */ url('../assets/fonts/icons.ttf') format('truetype'), /* Safari, Android, iOS */ url('../assets/fonts/icons.svg#svgFontName') format('svg');
+  /* Legacy iOS */
+}
 * {
   box-sizing: border-box;
 }
@@ -310,21 +317,30 @@ template {
   display: none;
 }
 .App {
-  text-align: center;
+  padding: 21px 12px;
 }
-.App-logo {
-  height: 40vmin;
-}
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App #navBack::before {
+  content: '←';
+  padding: 2px 2px 0 0;
+  margin-right: 8px;
+  font-family: 'vegasIcons';
+  font-size: 1.1rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  color: #ffffff;
+  background: #895e95;
 }
-.App-link {
-  color: #09d3ac;
+.App #navBack {
+  height: 21px;
+  display: flex;
+  align-items: center;
+  color: #895e95;
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  cursor: pointer;
 }
