remove duplicates and sort all hotels list

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -344,3 +344,8 @@ template {
   font-size: 1.6rem;
   cursor: pointer;
 }
+.hotelsList {
+  list-style-type: none;
+  padding: 0;
+  background: #efefef;
+}
