--- a/client/src/styles/main.less
+++ b/client/src/styles/main.less
@@ -1,10 +1,11 @@
 @font-face {
   font-family: 'vegasIcons';
   src: url('../assets/fonts/icons.eot'); /* IE9 Compat Modes */
-  src: url('../assets/fonts/icons.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../assets/fonts/icons.woff') format('woff'), /* Modern Browsers */
-       url('../assets/fonts/icons.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('../assets/fonts/icons.svg#svgFontName') format('svg'); /* Legacy iOS */
+  src: url('../assets/fonts/icons.eot?#iefix') format('embedded-opentype'),
+    /* IE6-IE8 */ url('../assets/fonts/icons.woff') format('woff'),
+    /* Modern Browsers */ url('../assets/fonts/icons.ttf') format('truetype'),
+    /* Safari, Android, iOS */ url('../assets/fonts/icons.svg#svgFontName')
+      format('svg'); /* Legacy iOS */
 }
 
 * {
@@ -20,3 +21,5 @@ html {
 @import 'variables.less';
 
 @import './App.less';
+
+@import './HotelsList.less';
