place left items into grid

--- a/client/src/styles/HotelsList.less
+++ b/client/src/styles/HotelsList.less
@@ -1,5 +1,9 @@
 .hotelsList {
   list-style-type: none;
   padding: 0;
+  margin: 0;
   background: @light-gray;
+
+  grid-column: 1;
+  grid-row: 2;
 }
