--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -358,9 +358,25 @@ template {
 }
 .hotelsList {
   list-style-type: none;
-  padding: 0;
+  padding: 22px 14px 0;
   margin: 0;
   background: #efefef;
   grid-column: 1;
   grid-row: 2;
+}
+.hotelsList li {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  line-height: 1.5rem;
+  margin-bottom: 1.9rem;
+}
+.hotelsList li .name {
+  color: #895e95;
+}
+.hotelsList li .price {
+  color: #6a6a6a;
+  width: 55px;
+  display: flex;
+  justify-content: flex-end;
 }
