style name of quick info

--- a/client/src/styles/App.less
+++ b/client/src/styles/App.less
@@ -1,30 +1,7 @@
 .App {
   padding: 21px 12px;
 
-  #navBack::before {
-    content: '←';
-    padding: 2px 2px 0 0;
-    margin-right: 8px;
-    font-family: 'vegasIcons';
-    font-size: 1.1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 12px;
-    width: 12px;
-    border-radius: 50%;
-    color: @white;
-    background: @primary;
-  }
-
-  #navBack {
-    height: 21px;
-    display: flex;
-    align-items: center;
-    color: @primary;
-    background: none;
-    border: none;
-    font-size: 1.6rem;
-    cursor: pointer;
+  .skeleton {
+    background-color: @light-gray;
   }
 }
