--- a/client/src/styles/main.less
+++ b/client/src/styles/main.less
@@ -1,3 +1,5 @@
+/* autoprefixer grid: autoplace */
+
 @font-face {
   font-family: 'vegasIcons';
   src: url('../assets/fonts/icons.eot'); /* IE9 Compat Modes */
@@ -25,3 +27,5 @@ html {
 @import './HotelDetails.less';
 
 @import './HotelsList.less';
+
+@import './HotelInfo.less';
