--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -1,3 +1,4 @@
+/* autoprefixer grid: autoplace */
 @font-face {
   font-family: 'vegasIcons';
   src: url('../assets/fonts/icons.eot');
@@ -319,7 +320,10 @@ template {
 .App {
   padding: 21px 12px;
 }
-.App #navBack::before {
+.App .skeleton {
+  background-color: #efefef;
+}
+#navBack::before {
   content: '←';
   padding: 2px 2px 0 0;
   margin-right: 8px;
@@ -334,7 +338,7 @@ template {
   color: #ffffff;
   background: #895e95;
 }
-.App #navBack {
+#navBack {
   height: 21px;
   display: flex;
   align-items: center;
@@ -345,31 +349,36 @@ template {
   cursor: pointer;
 }
 .pageContainer {
-  margin: 23px 9px 0 5px;
+  margin: 23px 4px 0 5px;
   display: grid;
-  grid-template-columns: 248px auto;
-  grid-template-rows: 173px auto;
-  grid-column-gap: 27px;
-  grid-row-gap: 30px;
+  grid-gap: 30px;
+  grid-template: 'pic  info' 173px 'list info' auto / 248px auto;
 }
 .pageContainer img {
-  grid-column: 1;
-  grid-row: 1;
+  grid-area: pic;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+.pageContainer .hotelsList {
+  grid-area: list;
+}
+.pageContainer .hotelInfo {
+  grid-area: info;
+  margin: -6px 0 0 -3px;
 }
 .hotelsList {
   list-style-type: none;
   padding: 22px 14px 0;
   margin: 0;
   background: #efefef;
-  grid-column: 1;
-  grid-row: 2;
 }
 .hotelsList li {
   display: flex;
   justify-content: space-between;
   font-size: 1.5rem;
   line-height: 1.5rem;
-  margin-bottom: 1.9rem;
+  margin-bottom: 1.86rem;
 }
 .hotelsList li .name {
   color: #895e95;
@@ -379,4 +388,22 @@ template {
   width: 55px;
   display: flex;
   justify-content: flex-end;
+}
+.hotelInfo {
+  width: 100%;
+  height: 100%;
+}
+.hotelInfo .quickInfo {
+  grid-template: 'name price' auto 'info price' auto / auto auto;
+}
+.hotelInfo .quickInfo .name {
+  font-size: 3.7rem;
+  color: #6a6a6a;
+  grid-area: name;
+}
+.hotelInfo .quickInfo .name::after {
+  content: attr(data-rating);
+  color: #9999a3;
+  font-size: 2rem;
+  margin-left: 6px;
 }
