style info in quick info

--- a/client/src/styles/HotelDetails.less
+++ b/client/src/styles/HotelDetails.less
@@ -1,5 +1,5 @@
 #navBack::before {
-  content: '←';
+  content: '\2190';
   padding: 2px 2px 0 0;
   margin-right: 8px;
   font-family: 'vegasIcons';
