completed quick info styling

--- a/client/src/styles/HotelDetails.less
+++ b/client/src/styles/HotelDetails.less
@@ -1,3 +1,7 @@
+button {
+  cursor: pointer;
+}
+
 #navBack::before {
   content: '\2190';
   padding: 2px 2px 0 0;
@@ -22,7 +26,6 @@
   background: none;
   border: none;
   font-size: 1.6rem;
-  cursor: pointer;
 }
 
 .pageContainer {
