--- a/client/src/styles/HotelsList.less
+++ b/client/src/styles/HotelsList.less
@@ -10,6 +10,7 @@
     font-size: 1.5rem;
     line-height: 1.5rem;
     margin-bottom: 1.86rem;
+    cursor: pointer;
 
     .name {
       color: @primary;
