--- a/client/src/styles/HotelInfo.less
+++ b/client/src/styles/HotelInfo.less
@@ -122,6 +122,8 @@
     }
 
     .toggle {
+      display: flex;
+      align-items: center;
       margin: 14px 18px;
       padding: 0;
       background-color: transparent;
@@ -132,6 +134,14 @@
       &::after {
         content: '\2193';
         font-family: 'vegasIcons';
+        color: @white;
+        background-color: @primary;
+        width: 10px;
+        height: 10px;
+        font-size: 10px;
+        padding: 2px;
+        margin-left: 4px;
+        border-radius: 50%;
       }
     }
   }
