--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -499,6 +499,8 @@ button {
   height: 200px;
 }
 .hotelInfo .tabbedInfo .toggle {
+  display: flex;
+  align-items: center;
   margin: 14px 18px;
   padding: 0;
   background-color: transparent;
@@ -509,4 +511,12 @@ button {
 .hotelInfo .tabbedInfo .toggle::after {
   content: '\2193';
   font-family: 'vegasIcons';
+  color: #ffffff;
+  background-color: #895e95;
+  width: 10px;
+  height: 10px;
+  font-size: 10px;
+  padding: 2px;
+  margin-left: 4px;
+  border-radius: 50%;
 }
