style location tab

--- a/client/src/styles/HotelInfo.less
+++ b/client/src/styles/HotelInfo.less
@@ -128,6 +128,21 @@
           margin: 0;
         }
       }
+
+      .address {
+
+        &::before {
+          content: '\2352';
+          font-family: 'vegasIcons';
+          margin: 0 10px 0 3px;
+        }
+
+        font-size: 2rem;
+      }
+
+      .hotelMap {
+        margin-top: 13px;
+      }
     }
 
     .collapsed {
