fix price in IE

--- a/client/src/styles/HotelInfo.less
+++ b/client/src/styles/HotelInfo.less
@@ -49,7 +49,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      padding-right: 8px;
+      padding: 0 8px 0 125px;
 
       .num {
         margin: -11px 27px 0 0;
