--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -319,6 +319,8 @@ template {
 }
 .App {
   padding: 21px 12px;
+  max-width: 984px;
+  margin: 0 auto;
 }
 .App .skeleton {
   background-color: #efefef;
@@ -436,7 +438,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  padding-right: 8px;
+  padding: 0 8px 0 125px;
 }
 .hotelInfo .quickInfo .price .num {
   margin: -11px 27px 0 0;
