fix star styling

--- a/client/src/styles/HotelInfo.less
+++ b/client/src/styles/HotelInfo.less
@@ -19,8 +19,10 @@
 
     .name::after {
       content: attr(data-rating);
+      font-family: 'vegasIcons';
       color: #9999a3;
-      font-size: 2rem;
+      font-size: 1.5rem;
+      letter-spacing: .2rem;
       margin-left: 6px;
     }
 
