--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -411,8 +411,10 @@ button {
 }
 .hotelInfo .quickInfo .name::after {
   content: attr(data-rating);
+  font-family: 'vegasIcons';
   color: #9999a3;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
   margin-left: 6px;
 }
 .hotelInfo .quickInfo .info {
