--- a/client/src/styles/HotelDetails.less
+++ b/client/src/styles/HotelDetails.less
@@ -43,7 +43,8 @@ button {
     grid-area: pic;
 
     width: 100%;
-    height: 100%;
+    height: auto;
+    background-color: @light-gray;
     border: 0;
   }
 
