--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -12,6 +12,9 @@
 html {
   font-size: 62.5%;
 }
+button:focus {
+  outline: 0;
+}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -361,7 +364,8 @@ button {
 .pageContainer img {
   grid-area: pic;
   width: 100%;
-  height: 100%;
+  height: auto;
+  background-color: #efefef;
   border: 0;
 }
 .pageContainer .hotelsList {
